--- a/DriveFiller.csproj
+++ b/DriveFiller.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <StartupObject>DriveFiller.Program</StartupObject>
     <ApplicationIcon>logo.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
