--- a/DriveFiller.csproj
+++ b/DriveFiller.csproj
@@ -8,6 +8,8 @@
     <StartupObject>DriveFiller.Program</StartupObject>
     <ApplicationIcon>logo.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
